# Backend/Expenses/src/main/java/com/projectalt96/expenses/delegate/ExpenseDelegateImpl.java
@@ -2,6 +2,7 @@ package com.projectalt96.Expenses.delegate;
 
 import com.projectalt96.Expenses.api.ExpenseApiDelegate;
 import com.projectalt96.Expenses.dto.ExpenseDTO;
+import com.projectalt96.Expenses.dto.RetrieveExpensesResponse;
 import com.projectalt96.Expenses.service.ExpensesService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -17,9 +18,9 @@ public class ExpenseDelegateImpl implements ExpenseApiDelegate {
     }
 
     @Override
-    public ResponseEntity<ExpenseDTO> saveExpense(ExpenseDTO expenseDTO) {
-        return ResponseEntity.ok(expensesService.saveExpense(expenseDTO));
+    public ResponseEntity<RetrieveExpensesResponse> getExpensesList() {
+        RetrieveExpensesResponse responseEntity = new RetrieveExpensesResponse();
+        responseEntity.setExpenses(expensesService.getExpensesList());
+        return ResponseEntity.ok(responseEntity);
     }
-
-
 }
